--- a/empoweredconvofrontend/src/App.css
+++ b/empoweredconvofrontend/src/App.css
@@ -23,11 +23,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.empowered-conversation-logo-md {	
+  height: 49px;	
+  width: 77px;
 }
