--- a/empoweredconvofrontend/src/components/LandingPage/Landing.css
+++ b/empoweredconvofrontend/src/components/LandingPage/Landing.css
@@ -1,6 +1,6 @@
-.intro {
+.landing {
   /* border: 1px solid red; */
-  max-width: 1000px;
+  max-width: 1440px;
   display: block;
   margin: 0 auto;
 }
@@ -14,18 +14,18 @@
 }
 
 .empoweredLeftBoxes {
-  padding: 10px;
   /* border: 1px solid green; */
+  padding: 145px 0 0 200px;
 }
 
 .empoweredRight {
-  height: 620px;
+  height: 600px;
   background-color: #24b4a5;
   width: 34%;
 }
 
 .intro h1 {
-  font-size: 5rem;
+  font-size: 5.5rem;
   font-weight: bold;
   padding: 10px 0;
 }
@@ -36,18 +36,18 @@
 
 .intro h2 {
   font-size: 2.5rem;
-  padding: 20px 0;
+  padding: 0 0 15px 0;
 }
 
 .intro h3 {
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   font-weight: bold;
   font-style: italic;
-  padding: 20px 0;
+  padding: 8px 0 12px 0;
 }
 
 .intro h4 {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   padding: 5px 0;
 }
 
@@ -60,9 +60,9 @@
   background-color: #2d2f38;
   border: none;
   border-radius: 3px;
-  padding: 10px 40px;
-  margin: 30px 80px;
-  font-size: 1.6rem;
+  padding: 10px 50px;
+  margin: 45px 140px 45px 0;
+  font-size: 1.7rem;
   color: white;
 }
 
@@ -72,7 +72,7 @@
 }
 
 .introBottomBoxRight {
-  height: 250px;
+  height: 107px;
   background-color: #8fedc2;
   width: 50%;
 }
@@ -81,9 +81,6 @@
 
 .ctaBoxes {
   /* border: 1px solid green; */
-  max-width: 1000px;
-  display: block;
-  margin: 0 auto;
   display: flex;
 }
 
@@ -94,18 +91,18 @@
 }
 
 .ctaBoxesMid {
-  height: 250px;
+  height: 410px;
   background-color: #8fedc2;
   width: 50%;
 }
 
 .ctaBoxesRight {
-  height: 250px;
+  height: 410px;
   background-color: #24b4a5;
   width: 34%;
 }
 
 .ctaBoxesBottom {
-    height: 250px;
-    background-color: #24b4a5;
+  height: 250px;
+  background-color: #24b4a5;
 }
