--- a/empoweredconvofrontend/src/index.css
+++ b/empoweredconvofrontend/src/index.css
@@ -14,3 +14,64 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 4px 0 0 0;
+  color: #2e2f38;
+  font-family: 'Nunito', sans-serif;
+}
+
+h1 {
+  font-size: 25px;
+  font-weight: 100;
+  letter-spacing: 4px;
+  line-height: 34px;
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+h3 {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+h4 {
+  font-size: 25px;
+  font-weight: 300;
+}
+
+h5 {
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 41px;
+}
+
+h6 {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+p {
+  margin: 4px 0;
+  color: #2e2f38;
+  font-family: 'Nuniuto', sans-serif;
+  text-align: justify;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 27px;
+}
+
+hr {
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  border-style: inset;
+  border-top: 1px solid #f76a29;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+}
