--- a/empoweredconvofrontend/src/index.css
+++ b/empoweredconvofrontend/src/index.css
@@ -47,7 +47,7 @@ h5 {
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
-  border-bottom: 1px solid #2e2f38;
+  border-bottom: 1px solid #e0e1e2;
 }
 
 h6 {
