--- a/empoweredconvofrontend/src/components/Form/Form.css
+++ b/empoweredconvofrontend/src/components/Form/Form.css
@@ -90,3 +90,47 @@
   justify-content: center;
   align-items: center;
 }
+
+@font-face {
+  font-family: Avenir;
+  src: url(../../assets/AvenirLTStd-Book.otf);
+}
+
+.security-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+
+.security-container p {
+  margin-bottom: 70px;
+  font-size: 1.6rem;
+  text-align: center;
+  font-family: Avenir;
+  width: 100%;
+  color: white;
+}
+
+.button-container {
+  margin-top: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.submit-key {
+  width: 8vw;
+  height: 35px;
+  vertical-align: top;
+}
+
+.ui.text.loader {
+  margin-top: 50px;
+}
+
+.security-input {
+  width: 50%;
+}
