--- a/empoweredconvofrontend/src/components/Form/Form.css
+++ b/empoweredconvofrontend/src/components/Form/Form.css
@@ -1,12 +1,17 @@
 /* BACKGROUND */
+@font-face {
+  font-family: Avenir;
+  src: url(../../assets/AvenirLTStd-Book.otf);
+}
+
 .stage {
-  height: 1000px;
+  height: 760px;
   width: 100%;
 }
 
 .stage-left {
-  min-height: 44%;
-  width: 64%;
+  min-height: 34%;
+  width: 71.8%;
   position: absolute;
   z-index: 1;
   display: flex;
@@ -17,16 +22,30 @@
 }
 
 .stage-left .stage-title {
-  width: 440px;
-  margin: 200px 0 40px 50%;
-  padding-right: 50px;
-  font-size: 2.1rem;
+  width: 490px;
+  margin: 80px 19% 40px 0;
+  /* padding-right: 50px; */
   position: relative;
   z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
+  color: #2e2f38;
+  font-family: Avenir;
+  font-size: 2.1rem;
+  text-align: justify;
+}
+
+.stage-left .stage-title h1 {
+  font-size: 3.7rem;
+  letter-spacing: 4px;
+  line-height: 34px;
+}
+
+.stage-left .stage-title p {
+  margin: 2px 0;
+  line-height: 27px;
 }
 
 .stage-left .stage-title .required {
@@ -34,7 +53,7 @@
 }
 
 .stage-left .lime-card {
-  height: 532px;
+  height: 490px;
   width: 440px;
   position: relative;
   z-index: 2;
@@ -43,9 +62,8 @@
 
 /* CONTENT PLATE */
 .float-plane {
-  min-height: calc(100vh - 95px);
+  min-height: 900px;
   min-width: 100%;
-  padding-top: 350px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,6 +77,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 14px 14px 20px 6px rgba(0, 0, 0, 0.20);
 }
 
 .float-plane .float-box .modal-box {
@@ -77,9 +96,25 @@
   height: 150px;
   width: 100%;
   margin-bottom: 10px;
+  font-family: Avenir;
   text-align: justify;
 }
 
+.content-box .text-box h5 {
+  width: fit-content;
+  font-size: 2.5rem;
+  line-height: 24px;
+  border-bottom: 1px solid #e0e1e2;
+}
+
+.content-box .text-box p {
+  margin: 8px 0;
+  color: #2e2f38;
+  text-align: justify;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 18px;
+}
 
 .float-plane .float-box .agree-submit {
   width: 100%;
@@ -91,13 +126,16 @@
   align-items: center;
 }
 
-@font-face {
+.float-box .agree-submit .agree-checktext {
+  margin-left: 4px;
+  padding-top: 1.5px;
   font-family: Avenir;
-  src: url(../../assets/AvenirLTStd-Book.otf);
+  font-size: 1.3em;
 }
 
+/* SECURITY CHECKPOINT */
 .security-container {
-  background-color: #24b4a5;
+  background-color: #FFFFFF;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -111,7 +149,8 @@
   text-align: center;
   font-family: Avenir;
   width: 100%;
-  color: white;
+  color: #2E2F38;
+  font-weight: bolder;
   position: absolute;
   top: 200px;
 }
@@ -124,16 +163,28 @@
 }
 
 .ui.text.loader {
-  margin-top: 80px;
+  margin-top: 50px;
 }
 
 .security-input {
   width: 100%;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 .security-container form {
   width: 50%;
   display: flex;
   justify-content: center;
+}
+
+.preview-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.form-submit {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
