--- a/empoweredconvofrontend/src/components/NavBar/Bar.css
+++ b/empoweredconvofrontend/src/components/NavBar/Bar.css
@@ -1,95 +1,92 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
-
-/*header{
-    /*border:solid blue;
-    display:flex;
+/* NOLAN:
+  Had to readjust size based off of percentage to make the navbar fit properly on my screen. Not sure
+  if keeping a hard width is going to do well for those with smaller screens.
+*/
+@font-face {
+  font-family: Avenir;
+  src: url(../../assets/AvenirLTStd-Roman.otf);
 }
 
-nav{
-    /*border:solid green;
-    height: 69px;
-    width: 1409px;
-    margin:10px;
-    display:flex;
-    justify-content: flex-end;
+.nav-bar {
+  width: 100%;
+  height: 69px;
+  /*width: 1440px;*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top:15px;
+  /*position: absolute;
+  z-index: 5;*/
+  background-color: #ffffff;
 }
 
-header div{
-    display:flex;
-    flex-direction: column;
-    margin-top:10px;
+.nav-front {
+  height: 69px;
+  width: 36%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
- .logo{
-      border:solid red;
-      height: 54px;
-      width: 177px;
-      cursor: pointer;
+
+@media (max-width: 888px) {
+  .nav-front {
+    display: none;
   }
-
-  header div p{
-        
-        color: #2E2F38;
-        font-family: 'Nunito', sans-serif; Avenir font isn't free     
-        font-size: 12px;
-        font-weight: 500;
-        line-height: 16px;
-    
-  }
-
-
-  .about {
-	height: 25px;
-	width: 51px;
-	color: #2E2F38;
-    font-family: 'Nunito', sans-serif; /*Avenir font isn't free
-	font-size: 18px;
-	font-weight: 300;
-    line-height: 25px;
-    margin:15px;
-   
-
-   
-} 
-.contact {
-	height: 25px;
-	width: 64px;
-	color: #2E2F38;
-    font-family: 'Nunito', sans-serif; /*Avenir font isn't free
-	font-size: 18px;
-	font-weight: 300;
-    line-height: 25px;
-    margin:15px;
-
-}
-.support {
-	height: 25px;
-	width: 65px;
-	color: #2E2F38;
-    font-family: 'Nunito', sans-serif; /*Avenir font isn't free
-	font-size: 18px;
-	font-weight: 300;
-    line-height: 25px;
-    margin:15px;
-
 }
 
-/*nav button {
-	height: 37px;
-    width: 142px;
-    border: transparent;
-    border-radius: 5px;
-    background-color: #2E2F38;
-    font-family: 'Nunito', sans-serif; /*Avenir font isn't free
-    color: #FFFFFF;    font-size: 18px;	font-weight: 300;	line-height: 25px;
-    margin:15px;
-    cursor: pointer;
-    position: relative; /*ran into a problem with the buttons position,using this for now
-    bottom:5px;
-    
-}*/
+.nav-bar .logo-div {
+  height: 83px;
+  width: 142px;
+  margin: 5px 5px 5px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #2e2f38;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+}
 
-/*mobile nav...used a tutorial and refactored for our needs dev credited below,may refactor with js/react but
-vanilla css was the best option for now*/
+.nav-bar .logo-div h6 {
+  font-family: Avenir;
+}
+
+.nav-bar .logo-div .nav-logo {
+  max-height: 49px;
+  max-width: 77px;
+  cursor: pointer;
+}
+
+nav .link-dec {
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  color: #2e2f38;
+  font-family: Avenir;
+  font-size: 20px;
+  line-height: 25px;
+}
+
+/* NOLAN: Removed 'position' because it was off-setting button alignment. */
+nav .nav-button {
+  height: 35px;
+  width: 142px;
+  margin: 0 20px 6px 0;
+  padding-top: 3px;
+  color: #ffffff;
+  font-family: Avenir;
+  font-size: 20px;
+  font-weight: 300;
+  text-align: center;
+  line-height: 35px;
+  cursor: pointer;
+  background-color: #2e2f38;
+  border: transparent;
+  border-radius: 3px;
+};
+
+/* RAYMOND: mobile nav...used a tutorial and refactored for our needs dev credited below,may refactor with js/react but
+vanilla css was the best option for now */
 
 /*
  * Made by Erik Terwan
@@ -102,256 +99,151 @@ vanilla css was the best option for now*/
  * prefixes.
  */
 
-.mobilenav{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    width:100%;
-   
+.mobile-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
-@media (min-width:678px){
-    .mobilenav{
-    display:none;
+@media (min-width:888px) {
+  .mobile-nav {
+    display: none;
+  }
 }
-}
+
+
 
 .menu {
-	height: 25px;
-	width: 53px;
-	opacity: 0.5;
-	color: #2E2F38;
-    font-family: 'Nunito', sans-serif; /*Avenir font isn't free*/   
-	font-size: 18px;
-	font-weight: 300;
-	letter-spacing: 1.5px;
-	line-height: 25px;
+  height: 25px;
+  width: 53px;
+  opacity: 0.5;
+  color: #2E2F38;  
+  font-size: 18px;
+  font-weight: 300;
+  letter-spacing: 1.5px;
+  line-height: 25px;
+
 }
 
-nav{
-    width:25%;
-    display:flex;
-    justify-content: flex-end;
-    padding:5px;
-}
-
-a
-{
-text-decoration: none;
-color: #2E2F38;
-font-family: 'Nunito', sans-serif; /*Avenir font isn't free*/   
-  
+a {
+  text-decoration: none;
+  color: #2E2F38;
   transition: color 0.3s ease;
 }
 
-a:hover
-{
-  color: #24B4A5
+a:hover {
+  color: #24B4A5;
 }
 
-#menuToggle
-{
-    display: flex;
-   
-    flex-direction: column;
-    padding-top:15px;
-    padding-right:10px;
-    position: relative;
-    
-    
-    
-    
-    
-   
-    /*left: 50px;*/
- 
+#menuToggle {
+  display: flex;
+  flex-direction: column;
+  padding-top:15px;
+  padding-right:10px;
+  position: relative;
   z-index: 1;
-  
   -webkit-user-select: none;
   user-select: none;
 }
 
-#menuToggle input
-{
-  display: block;
+#menuToggle input {
   width: 40px;
-  height: 32px;
+  height: 40px;
+  top: 1px;
+  left: -10px;
+  display: block;
   position: absolute;
-  top: -7px;
-  left: -5px;
-  
-  cursor: pointer;
-  
-  opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
-  
+  opacity: 0; /* hide this */
+  cursor: pointer;
   -webkit-touch-callout: none;
 }
 
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
+/* Just a quick hamburger */
+#menuToggle span {
   width: 33px;
   height: 4px;
   margin-bottom: 5px;
+  display: block;
   position: relative;
-  
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  background: 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  opacity: 0.55s ease;
   background: #2E2F38;
   border-radius: 3px;
-  
-  z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
 }
 
-#menuToggle span:first-child
-{
+#menuToggle span:first-child {
   transform-origin: 0% 0%;
 }
 
-#menuToggle span:nth-last-child(2)
-{
+#menuToggle span:nth-last-child(2)  {
   transform-origin: 0% 100%;
 }
 
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
+/* Transform all the slices of hamburger into a crossmark. */
+#menuToggle input:checked ~ span {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
   background: #232323;
 }
 
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
+/* But let's hide the middle one. */
+#menuToggle input:checked ~ span:nth-last-child(3) {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
+/* Ohyeah and the last one should go the other direction */
+#menuToggle input:checked ~ span:nth-last-child(2) {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
-
-#menu
-{
-    position: absolute;
-    width: 300px;
-    margin: -100px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
-    display:none;
-    
-    
-  
- 
-  
-  
+#menu {
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  display:none;
+  position: absolute;
   background: white;
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.45);
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
+
   /* to stop flickering of text in safari */
-  
   transform-origin: 0% 0%;
   transform: translate(0,0,0,0);
-  
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu li
-{
+#menu li {
   padding: 10px 0;
   font-size: 22px;
 }
 
-
-#menuToggle input:checked ~ ul
-{
+#menuToggle input:checked ~ ul {
   transform:none;
   transform: translate(-50%, 0);
   display:block;
-
- 
 }
 
-footer{
-    margin-top:10px;
-    display:flex;
-    flex-direction: column;
-    background:#FFFFFF;
+.mob-nav-button{
+  height: 35px;
+  width: 142px;
+  margin: 0 20px 0 0;
+  padding: 5px;
+  color: #ffffff;
+  font-family: Avenir;
+  font-size: 20px;
+  font-weight: 300;
+  text-align: center;
+  line-height: 35px;
+  cursor: pointer;
+  background-color: #2e2f38;
+  border: transparent;
+  border-radius: 3px;
 
- 
-
-}
-
-footer p:first-child{
-    
-    height: 41px;
-   
-    color: #24B4A5;
-    font-family: 'Nunito', sans-serif; /*Avenir font isn't free*/   
-    font-size: 30px;
-    font-weight: 900;
-    line-height: 41px;
-    margin:15px 5px 15px 15px;
-}
-
-.heart{
-    padding-top:25px;
-    font-size: 18px;
-    color: #24B4A5;
-
-    
-}
-.topfooter{
-    display:flex;
-    justify-content: center;
-}
-
-
-footer p{
-   
-        height: 27px;
-        
-        color: #2E2F38;
-        font-family: 'Nunito', sans-serif; /*Avenir font isn't free*/   
-        font-size: 25px;
-        font-weight: 300;
-        line-height: 27px;
-        
-   
-
-}
-
-.icons{
-    display: flex;
-    justify-content: center;
-   
-}
-
-.icon{
-    
-        font-size: 42px;
-        color: #2E2F38;
-        margin:25px;
-        cursor: pointer;
-  
-    
 }
