--- a/empoweredconvofrontend/src/components/Form/Form.css
+++ b/empoweredconvofrontend/src/components/Form/Form.css
@@ -77,7 +77,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 14px 14px 20px 6px rgba(0, 0, 0, 0.20);
+  box-shadow: 14px 14px 20px 6px rgba(0, 0, 0, 0.2);
 }
 
 .float-plane .float-box .modal-box {
@@ -135,7 +135,7 @@
 
 /* SECURITY CHECKPOINT */
 .security-container {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -149,7 +149,7 @@
   text-align: center;
   font-family: Avenir;
   width: 100%;
-  color: #2E2F38;
+  color: #2e2f38;
   font-weight: bolder;
   position: absolute;
   top: 200px;
